Ajustar Swagger.
