# src/main/routes/marcas-veiculo-route.ts
@@ -1,5 +1,6 @@
+import { getMarcaVeiculoController } from '@/main/factories/controllers/marca-veiculo/get-marca-veiculo-controller-factory'
 import { Router } from 'express'
 
 export default (router: Router): void => {
-  router.get('/marcas-veiculo', null)
+  router.get('/marcas-veiculo', getMarcaVeiculoController)
 }
