# src/main/routes/utilizacao-veiculos-route.ts
@@ -1,0 +1,7 @@
+import { Router } from 'express'
+
+export default (router: Router): void => {
+  router.get('/utilizacao-veiculos', null)
+  router.post('/utilizacao-veiculos', null)
+  router.patch('/utilizacao-veiculos/utilizacaoVeiculoId', null)
+}
